# fpa_workflows

./: .dockerignore  .env.prod.template  .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  LICENSE  PRODUCTION_DEPLOYMENT.md  README.md  analytics_test_data.csv  deploy-prod.sh  deploy_category_servers.py  docker-compose.prod.yml  docker-compose.yml  docker-dev.sh  finn_tools_1.md  finn_tools_complete.md  finn_tools_complete.md.bkup  formula_servers_mcp_config.json  formula_servers_mcp_config_complete.json  main.py  nginx.conf  performance_benchmark.py  prompt_providers.py  pyproject.toml  test_agent_math_files_docker.py  test_data.csv  test_data.parquet  test_data_comparison_and_ranking.py  test_data_validation_and_quality.py  test_date_and_time_functions.py  test_excel_style_misc_utils.py  test_logical_and_error_handling.py  test_math_mcp_direct.py  test_math_mcp_server.py  test_phase1_tools.py  test_read_only_agent.py  test_sum_power_functions.py  test_text_and_data_management.py
.devcontainer/: devcontainer.json
agents/: README.md
data/: completeness_test.parquet  consistency_test.parquet  customer_test.csv  date_test.parquet  duplicate_test.parquet  large_test.csv  large_test.parquet  numeric_test.parquet  outlier_test.parquet  sales_test.csv  sales_test.parquet  simple_file.txt  test_currency.csv  test_dates.csv  test_dates.parquet  test_duplicates.csv  test_file.txt  test_mixed.csv  test_names.csv  test_numbers.csv  test_numbers.parquet  test_text.csv  test_text.parquet  test_times.csv  test_times.parquet
docs/: MCP_INTEGRATION.md  SECURITY.md  (+14 more)
(+303 files in other folders)
