[project]
name = "fpa-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "google-adk>=1.8.0",
    "google-generativeai>=0.8.5",
    "litellm>=1.0.0",
    "polars>=1.32.0",
    "pydantic-ai>=0.4.11",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.1",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
